day-166/KUBERNETIES/k8s/deployement-product.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: product

  template:
    metadata:
      labels:
        app: product

    spec:
      containers:
        - name: product
          image: product_server:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

            requests:
              memory: "64Mi"
              cpu: "250m"
