day-166/KUBERNETIES/k8s/service-product.yml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  selector:
    app: product

  type: ClusterIP

  ports:
    - name: product-service-port
      port: 80
      targetPort: 8080
