day-166/KUBERNETIES/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app
  labels:
    app.kubernetes.io/name: express-app
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main-server-service
            port: 
              number: 80

   - http:
       paths:
       - pathType: Prefix
         path: "/api/products"
         backend:
           service:
             name: product-service
             port: 
               number: 80
